--- a/template/pages.templ
+++ b/template/pages.templ
@@ -67,7 +67,7 @@ templ Listings(properties []types.PropertySummary) {
 			for _, property := range properties {
 				<a href={ templ.URL(fmt.Sprintf("/listings/%d", property.PropertyId)) }>
 					<div class="card mb-3">
-						<img src="..." class="card-img-top" alt="..."/>
+						<img src={ fmt.Sprintf("/images/%s", property.Url) } class="card-img-top" alt="..."/>
 						<div class="card-body">
 							<h5 class="card-title">{ property.Title }</h5>
 							<p class="card-text">{ property.Description }</p>
