--- a/template/components.templ
+++ b/template/components.templ
@@ -33,6 +33,7 @@ templ Sidebar(Page templ.Component) {
 				<li value=""><a href="/admin/newProperty">New Property</a></li>
 				<li><a href="/admin/listings">My Listings</a></li>
 				<li value=""><a href="">Settings</a></li>
+				<li value=""><a href="/admin/logout">Logout</a></li>
 			</ul>
 		</div>
 	</div>
