--- a/template/auth_page.templ
+++ b/template/auth_page.templ
@@ -1,40 +1,34 @@
 package template
 
 templ RegisterPage() {
-	<h1>Register</h1>
-	<form action="/create-user/" method="post">
-		<div class="mb-3">
-			<label for="exampleInputEmail1" class="form-label">Email address</label>
-			<input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"/>
-			<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-		</div>
-		<div class="mb-3">
-			<label for="exampleInputPassword1" class="form-label">Password</label>
-			<input type="password" name="password" class="form-control" id="exampleInputPassword1"/>
-		</div>
-		<div class="mb-3">
-			<label for="exampleInputPassword1" class="form-label">Role</label>
-			<input type="text" name="role" class="form-control" id="exampleInputPassword1"/>
-		</div>
-		<div class="mb-3">
-			<label for="exampleInputPassword1" class="form-label">Username</label>
-			<input type="text" name="username" class="form-control" id="exampleInputPassword1"/>
-		</div>
-		<button type="submit" class="btn btn-primary">Submit</button>
-	</form>
+	<div class="grid place-items-center h-[92vh]">
+		<form action="/create-user/" method="post" class="w-96 h-96 bg-base-100 shadow-xl rounded-lg flex flex-col grid place-items-center">
+			<div class="mb-3">
+				<label for="exampleInputEmail1" class="form-label">Email address</label>
+				<input type="email" name="email" class="form-control input input-bordered input-md w-full max-w-xs" id="exampleInputEmail1" aria-describedby="emailHelp"/>
+			</div>
+			<div class="mb-3">
+				<label for="exampleInputPassword1" class="form-label">Password</label>
+				<input type="password" name="password " class="form-control input input-bordered input-md w-full max-w-xs" id="exampleInputPassword1"/>
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+		</form>
+	</div>
 }
 
 templ Login() {
-	<form action="/auth-user/" method="post" hx-boost="true">
-		<div class="mb-3">
-			<label for="exampleInputEmail1" class="form-label">Email address</label>
-			<input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp"/>
-		</div>
-		<div class="mb-3">
-			<label for="exampleInputPassword1" class="form-label">Password</label>
-			<input type="password" class="form-control" name="password" id="exampleInputPassword1"/>
-		</div>
-		<button type="submit" class="btn btn-primary">Submit</button>
-	</form>
-	<a href="/register">Register</a>
+	<div class="grid place-items-center h-[92vh]">
+		<form action="/auth-user/" method="post" class="w-96 h-96 bg-base-100 shadow-xl rounded-lg flex flex-col grid place-items-center" hx-boost="true">
+			<div class="mb-3">
+				<label for="exampleInputEmail1" class="form-label">Email address</label>
+				<input type="email" class="form-control input input-bordered input-md w-full max-w-xs" name="email" id="exampleInputEmail1" aria-describedby="emailHelp"/>
+			</div>
+			<div class="mb-3">
+				<label for="exampleInputPassword1" class="form-label">Password</label>
+				<input type="password" class="form-control input input-bordered input-md w-full max-w-xs" name="password" id="exampleInputPassword1"/>
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+			<a href="/register" class="link link-info">Register</a>
+		</form>
+	</div>
 }
