--- a/template/layouts.templ
+++ b/template/layouts.templ
@@ -14,24 +14,17 @@ templ index() {
 			<script src="https://unpkg.com/htmx.org/dist/ext/debug.js"></script>
 			<script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
 		</head>
-		<body>
+		<body class="w-screen">
 			{ children... }
 		</body>
 	</html>
-	<style>
-    body {
-        width: 100%;
-        height: auto;
-    }
-</style>
 }
 
 templ MainLayout(Page templ.Component) {
 	@index() {
-		<div>
-			@Navbar()
-			@Page
-		</div>
+		@Navbar()
+		@Page
+		@Footer()
 	}
 }
 
