added migration folder, switched to postgres and made changes to property filter

--- a/template/pages.templ
+++ b/template/pages.templ
@@ -3,25 +3,41 @@ package template
 import (
 	"openlettings.com/types"
 	"openlettings.com/utils"
+	"openlettings.com/db"
 	"fmt"
 )
+
+var countryKey types.ContextKey = "countries"
+var propertyKey types.ContextKey = "property_types"
+
+templ Options(options []db.Option) {
+	for _, option :=range(options) {
+		<option value={ fmt.Sprint(option.Id) }>{ option.Name }</option>
+	}
+}
 
 templ ListingsFilter(filter types.PropertyFilter) {
 	<div>
 		<form action="/listings" method="GET">
 			<div class="join">
-				<div>
-					<div>
-						<input class="input input-bordered join-item" name="address" value={ filter.Address } placeholder="Address"/>
-					</div>
-				</div>
-				<select class="select select-bordered join-item" name="type">
-					<option value="" selected?={ filter.Property_type == "" }>Property type</option>
-					<option value="apartment" selected?={ filter.Property_type == "apartment" }>Apartment</option>
-					<option value="house" selected?={ filter.Property_type == "house" }>House</option>
-					<option value="condo" selected?={ filter.Property_type == "condo" }>Condo</option>
-					<option value="bungalo" selected?={ filter.Property_type == "bungalo" }>Bungalo</option>
-					<option value="cottage" selected?={ filter.Property_type == "cottage" }>Cottage</option>
+				<select class="select select-bordered join-item" name="country" hx-get="/parishes" hx-target="#parishes">
+					<option selected>Country</option>
+					if countries,ok := ctx.Value(countryKey).(([]db.Option)); ok {
+						for _, option := range(countries) {
+							<option value={ fmt.Sprint(option.Id) } selected?={ filter.Country == option.Id }>{ option.Name }</option>
+						}
+					}
+				</select>
+				<select class="select select-bordered join-item" name="parish" id="parishes">
+					<option value="0" selected>Parish</option>
+				</select>
+				<select class="select select-bordered join-item" name="property_type">
+					<option value="0" selected?={ filter.Property_type == 0 }>Property type</option>
+					if property_types, ok := ctx.Value(propertyKey).([]db.Option); ok {
+						for _, option := range(property_types) {
+							<option value={ fmt.Sprint(option.Id) } selected?={ filter.Property_type == option.Id }>{ option.Name }</option>
+						}
+					}
 				</select>
 				<select class="select select-bordered join-item" name="bedrooms">
 					<option selected>Bedrooms</option>
@@ -40,6 +56,24 @@ templ ListingsFilter(filter types.PropertyFilter) {
 					<option>4</option>
 					<option>5</option>
 					<option>6</option>
+				</select>
+				<select class="select select-bordered join-item" name="maxprice">
+					<option selected>Max Price</option>
+					<option>1000</option>
+					<option>1000000</option>
+					<option>10000000</option>
+					<option>100000000</option>
+					<option>10000000000</option>
+					<option>1000000000000</option>
+				</select>
+				<select class="select select-bordered join-item" name="minprice">
+					<option selected>Min Price</option>
+					<option>10000</option>
+					<option>1000000</option>
+					<option>10000000</option>
+					<option>1000000000</option>
+					<option>10000000000</option>
+					<option>1000000000000</option>
 				</select>
 				<div class="indicator">
 					<button class="btn join-item" type="submit">Search</button>
